--- a/Develop/package.json
+++ b/Develop/package.json
@@ -19,11 +19,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "if-env": "^1.0.4"
+    "babel": "^6.23.0",
+    "babel-plugin": "^1.0.7",
+    "express": "^4.18.2",
+    "if-env": "^1.0.4",
+    "manifest": "^0.1.4",
+    "workbox-build": "^6.5.4",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "devDependencies": {
-    "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+    "concurrently": "^5.3.0",
+    "css-loader": "^6.7.3",
+    "nodemon": "^2.0.4",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-pwa-manifest": "^4.3.0"
   }
 }
