--- a/Develop/server/package.json
+++ b/Develop/server/package.json
@@ -1,10 +1,15 @@
 {
-    "name": "JATE",
+    "name": "text-editor",
     "version": "1.0.0",
     "description": "",
     "main": "server.js",
     "scripts": {
-        "server": "nodemon server.js --ignore client"
+        "server": "nodemon server.js --ignore client",
+        "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
+        "start": "npm run build && cd server && node server.js",
+        "build": "cd client && npm run build",
+        "install": "cd server && npm i && cd ../client && npm i",
+        "client-install": "cd client && npm install"
     },
     "keywords": [],
     "author": "",
