--- a/Develop/package.json
+++ b/Develop/package.json
@@ -24,12 +24,14 @@
     "express": "^4.18.2",
     "if-env": "^1.0.4",
     "manifest": "^0.1.4",
+    "webpack-manifest-plugin": "^5.0.0",
     "workbox-build": "^6.5.4",
     "workbox-webpack-plugin": "^6.5.4"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
     "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.4",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
